<resources>
    <string name="app_name">RESTaurant</string>

    <string name="main_screen_qr_button">Сканировать QR-код</string>
    <string name="main_screen_login_button">Авторизоваться</string>

    <string name="login_screen_email">EMAIL</string>
    <string name="login_screen_email_header">Email:</string>
    <string name="login_screen_password">ПАРОЛЬ</string>
    <string name="login_screen_password_header">Пароль:</string>
    <string name="login_screen_header">Авторизация</string>
    <string name="login_screen_login_button">Авторизоваться</string>
    <string name="login_screen_text">У вас еще нет аккаунта?</string>
    <string name="login_screen_register">Зарегистрироваться</string>
    <string name="login_screen_forgot_password">Забыли пароль?</string>

    <string name="current_screen_header">Текущий заказ</string>
    <string name="current_screen_table">Стол №</string>
    <string name="current_screen_time">Время бронирования: </string>
    <string name="current_screen_waiter">Официант: </string>
    <string name="current_screen_total">Итог: </string>
    <string name="current_screen_total_rub"> руб.</string>
    <string name="current_screen_empty_order">Вы еще ничего не заказали</string>

    <string name="qr_fragment_title">Наведите камеру на QR-код</string>

    <string name="nav_order">Заказ</string>
    <string name="nav_history">История</string>
    <string name="nav_profile">Профиль</string>

    <string name="nav_cook_my_dish">Мои блюда</string>
    <string name="nav_cook_free_dish">Свободные блюда</string>
    <string name="nav_cook_profile">Профиль</string>

    <string name="empty_screen">Функционал в разработке</string>
    <string name="error_permission">Необходимо дать разрешения</string>

    <string name="profile_employee_restaurant">Заведение:</string>
    <string name="profile_employee_role">Роль:</string>
    <string name="profile_employee_logout">Выйти</string>
    <string name="profile_employee_header">Профиль</string>
    <string name="profile_employee_role_waiter">Официант</string>
    <string name="profile_employee_role_cook">Повар</string>

    <string name="free_dish_header">Свободные блюда</string>
    <string name="free_dish_empty_list">Свободных блюд пока что нет</string>
    <string name="free_dish_dialog_header">Подтверждение</string>
    <string name="free_dish_dialog_text">Вы уверены, что хотите взять данное блюдо на готовку?</string>

    <string name="my_dish_header">Мои блюда</string>
    <string name="my_dish_empty_list">Пока что у вас нет блюд в готовке</string>
    <string name="my_dish_dialog_header">Подтверждение</string>
    <string name="my_dish_dialog_text">Вы уверены, что хотите пометить данное блюдо готовым?</string>

    <string name="item_cook_order_type">Тип блюда:</string>
    <string name="item_cook_order_description">Описание: Тарелка с двумя помидорками и огурцами</string>
    <string name="item_cook_order_weight">Вес:</string>


</resources>