<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:fitsSystemWindows="true"
    tools:context=".ui.current.CurrentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingTop="20dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header"
            style="@style/WhiteBoldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/red_hat_display_bold"
            android:text="@string/current_screen_header"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_table_header"
            style="@style/WhiteBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_screen_table"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_table"
            app:layout_constraintEnd_toStartOf="@id/tv_table"
            app:layout_constraintTop_toTopOf="@id/tv_table" />

        <TextView
            android:id="@+id/tv_table"
            style="@style/WhiteBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <TextView
            android:id="@+id/tv_time_header"
            style="@style/WhiteBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_screen_time"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_time"
            app:layout_constraintEnd_toStartOf="@id/tv_time"
            app:layout_constraintTop_toTopOf="@id/tv_time" />

        <TextView
            android:id="@+id/tv_time"
            style="@style/WhiteBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_table" />

        <TextView
            android:id="@+id/tv_waiter_header"
            style="@style/WhiteBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_screen_waiter"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_waiter"
            app:layout_constraintEnd_toStartOf="@id/tv_waiter"
            app:layout_constraintTop_toTopOf="@id/tv_waiter" />

        <TextView
            android:id="@+id/tv_waiter"
            style="@style/WhiteBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_time" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/rounded_corner"
        android:paddingStart="22dp"
        android:paddingTop="4dp"
        android:paddingEnd="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_background">

        <TextView
            android:id="@+id/tv_total_header"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/red_hat_display_bold"
            android:text="@string/current_screen_total"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_total"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/red_hat_display_bold"
            android:text="999"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_total_header"
            app:layout_constraintStart_toEndOf="@id/tv_total_header"
            app:layout_constraintTop_toTopOf="@id/tv_total_header" />

        <TextView
            android:id="@+id/tv_total_rub"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/red_hat_display_bold"
            android:paddingStart="4dp"
            android:text="@string/current_screen_total_rub"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_total"
            app:layout_constraintStart_toEndOf="@id/tv_total"
            app:layout_constraintTop_toTopOf="@id/tv_total" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/tv_total" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:listitem="@layout/item_order" />

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="160dp"
            android:fontFamily="@font/red_hat_display_bold"
            android:text="@string/current_screen_empty_order"
            android:textAlignment="center"
            android:textColor="@color/light_grey"
            android:textSize="25sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:outlineSpotShadowColor="@color/light_grey"
            android:src="@drawable/ic_twotone_menu_book"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_empty" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>