<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:fitsSystemWindows="true"
    tools:context=".ui.employeeProfile.EmployeeProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/CustomToolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/dark_blue"
            android:paddingHorizontal="20dp"
            app:title="@string/profile_employee_header" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abl_header">

        <TextView
            android:id="@+id/tv_last_name"
            style="@style/WhiteBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="###"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_first_name"
            style="@style/WhiteBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="###"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_last_name" />

        <TextView
            android:id="@+id/tv_father_name"
            style="@style/WhiteBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="###"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_first_name" />

        <TextView
            android:id="@+id/tv_restaurant"
            style="@style/WhiteBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_employee_restaurant"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_father_name" />

        <TextView
            android:id="@+id/tv_restaurant_name"
            style="@style/WhiteBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="###"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_restaurant"
            app:layout_constraintStart_toEndOf="@id/tv_restaurant"
            app:layout_constraintTop_toTopOf="@id/tv_restaurant" />

        <TextView
            android:id="@+id/tv_role"
            style="@style/WhiteBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_employee_role"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_restaurant" />

        <TextView
            android:id="@+id/tv_role_name"
            style="@style/WhiteBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="###"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_role"
            app:layout_constraintStart_toEndOf="@id/tv_role"
            app:layout_constraintTop_toTopOf="@id/tv_role" />

        <Button
            android:id="@+id/btn_logout"
            style="@style/ButtonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/profile_employee_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_role" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>