<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="18dp"
    android:layout_marginHorizontal="16dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/dish_title"
                style="@style/BoldTextStyleCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:paddingBottom="12dp"
                android:text="Бифстроганов"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dish_type_header"
                style="@style/BoldTextStyleCardView"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="@string/item_cook_order_type"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dish_title" />

            <TextView
                android:id="@+id/dish_type"
                style="@style/BoldTextStyleCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="Салат"
                android:textColor="@color/black"

                app:layout_constraintBottom_toBottomOf="@id/dish_type_header"
                app:layout_constraintStart_toEndOf="@id/dish_type_header"
                app:layout_constraintTop_toTopOf="@id/dish_type_header" />

            <TextView
                android:id="@+id/dish_description_header"
                style="@style/BoldTextStyleCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="@string/item_cook_order_description"

                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dish_type_header" />

            <TextView
                android:id="@+id/dish_description"
                style="@style/BoldTextStyleCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="Тарелка с двумя помидорками"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/dish_description_header"
                app:layout_constraintStart_toEndOf="@id/dish_description_header"
                app:layout_constraintTop_toTopOf="@id/dish_description_header" />

            <TextView
                android:id="@+id/dish_ingredients"
                style="@style/BoldTextStyleCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="Два помидора"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dish_description_header" />

            <TextView
                android:id="@+id/dish_weight_header"
                style="@style/BoldTextStyleCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_cook_order_weight"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dish_ingredients" />

            <TextView
                android:id="@+id/dish_weight"
                style="@style/BoldTextStyleCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/dish_weight_header"
                app:layout_constraintStart_toEndOf="@id/dish_weight_header"
                app:layout_constraintTop_toTopOf="@id/dish_weight_header" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/iv"
            android:layout_width="91dp"
            android:layout_height="59dp"
            android:layout_marginTop="36dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:scaleType="centerCrop"
                android:src="@drawable/restaurant1" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_status"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_check_mark"
            app:layout_constraintEnd_toEndOf="@id/iv"
            app:layout_constraintStart_toStartOf="@id/iv"
            app:layout_constraintTop_toBottomOf="@id/iv" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/btn_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>